--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,6 @@ services:
   - type: web
     name: proyecto-personal
     env: python
-    # opcional: region: Oregon (us-west)
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn ProyectoWeb.wsgi:application"
     postDeployCommand: >
@@ -10,14 +9,14 @@ services:
       python manage.py loaddata datos.json &&
       python manage.py collectstatic --noinput
     envVars:
-      # Esta línea inyecta la Connection String de tu DB Render en DATABASE_URL
       - key: DATABASE_URL
         fromDatabase:
-          name: ProyectoDjangoDB      # ⬅️ el nombre exacto que ves en tu Dashboard
+          name: ProyectoDjangoDB
           property: connectionString
 
       - key: SECRET_KEY
         value: django-insecure-v18d5lwz6b6urfr8*a881=t0t*k2oc8h=g71pbgi&exo1(zj#c
+
       - key: DEBUG
         value: "False"
 
